crates/compiler/cypress/tests/snapshots/test_parse__closure_in_binop_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "a && \\x->x\n8\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpAnd=>OpAnd@1
            (BeginLambda
                Ident=>LowerIdent@3
                InlineLambdaArrow=>OpArrow@4
                Ident=>LowerIdent@5
            EndLambda)
        EndBinOpAnd)
        HintExpr
        Num=>Int@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("a"), And, Lambda([Ident("x")], Ident("x")))
IntBase10("8")

[=== formatted below ===]

