crates/compiler/cypress/tests/snapshots/test_parse__closure_in_binop_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "a\n&& (\\x -> x)\n    8\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpAnd=>OpAnd@1
            (*
                (BeginParens
                    (BeginLambda
                        Ident=>LowerIdent@4
                        InlineLambdaArrow=>OpArrow@5
                        Ident=>LowerIdent@6
                    EndLambda)
                EndParens)
                InlineApply=>CloseRound@7
                Num=>Int@8
            EndApply)
        EndBinOpAnd)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("a"), And, Apply(Lambda([Ident("x")], Ident("x")), [IntBase10("8")]))

[=== formatted below ===]

