crates/compiler/cypress/tests/snapshots/test_parse__closure_in_binop_with_spaces_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "i\n> (\\s -> s\n)\n    -a\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpGreaterThan=>OpGreaterThan@1
            (*
                (BeginParens
                    (BeginLambda
                        Ident=>LowerIdent@4
                        InlineLambdaArrow=>OpArrow@5
                        Ident=>LowerIdent@6
                    EndLambda)
                EndParens)
                InlineApply=>CloseRound@7
                (* Ident=>LowerIdent@9 EndUnaryMinus)
            EndApply)
        EndBinOpGreaterThan)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("i"), GreaterThan, Apply(Lambda([Ident("s")], Ident("s")), [UnaryOp(Minus, Ident("a"))]))

[=== formatted below ===]

