crates/compiler/cypress/tests/snapshots/test_parse__closure_with_underscores_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\\_, _name -> 42\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            Underscore=>Underscore@1
            Underscore=>NamedUnderscore@3
            InlineLambdaArrow=>OpArrow@4
            Num=>Int@5
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([Underscore("_"), Underscore("_name")], IntBase10("42"))

[=== formatted below ===]

