crates/compiler/cypress/tests/snapshots/test_parse__comment_after_def_moduledefs.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "foo = 1 # comment after\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign Ident=>LowerIdent@0 InlineAssign=>OpAssign@1 Num=>Int@2 EndAssign)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("foo"), IntBase10("1"))

[=== formatted below ===]

