crates/compiler/cypress/tests/snapshots/test_parse__comment_after_expr_in_parens_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "(i#abc\n)\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens Ident=>LowerIdent@1 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("i")

[=== formatted below ===]

