crates/compiler/cypress/tests/snapshots/test_parse__comment_after_expr_in_parens_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "i # abc\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("i")

[=== formatted below ===]

