crates/compiler/cypress/tests/snapshots/test_parse__comment_after_op_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "12\n* # test!\n92\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpStar=>OpStar@1 Num=>Int@2 EndBinOpStar)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("12"), Star, IntBase10("92"))

[=== formatted below ===]

